third_party/WebKit/Source/bindings/modules/v8/ConditionalFeaturesForModules.cpp
@@ -65,7 +65,8 @@ void installConditionalFeaturesForModules(
                                           v8::Local<v8::Object>(),
                                           prototypeObject, interfaceObject);
     }
-    // Mimics the [SecureContext] extended attribute.
+    // Mimics the [SecureContext] extended attribute. Work-around for
+    // https://crbug.com/695123.
     if (OriginTrials::webUSBEnabled(executionContext) &&
         executionContext->isSecureContext()) {
       V8NavigatorPartial::installWebUSB(isolate, world, v8::Local<v8::Object>(),
@@ -81,7 +82,8 @@ void installConditionalFeaturesForModules(
       V8WindowPartial::installImageCapture(isolate, world, instanceObject,
                                            prototypeObject, interfaceObject);
     }
-    // Mimics the [SecureContext] extended attribute.
+    // Mimics the [SecureContext] extended attribute. Work-around for
+    // https://crbug.com/695123.
     if (OriginTrials::webUSBEnabled(executionContext) &&
         executionContext->isSecureContext()) {
       V8WindowPartial::installWebUSB(isolate, world, instanceObject,
